adding functionality in JS

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,10 @@
 .hidden{
     display: none;
 }
+
+.icon-container{
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
