--- a/assets/style.css
+++ b/assets/style.css
@@ -8,3 +8,15 @@
     justify-content: center;
     align-items: center;
 }
+
+.forecast-container{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 200px;
+    padding-top: 40px;
+}
+
+.forecast-header{
+    margin-left: 700px;
+    margin-top: 50px;
+}
