--- a/assets/style.css
+++ b/assets/style.css
@@ -9,14 +9,19 @@
     align-items: center;
 }
 
-.forecast-container{
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: 200px;
-    padding-top: 40px;
+.five-day-cards{
+    padding-top: .5rem;
 }
 
 .forecast-header{
-    margin-left: 700px;
-    margin-top: 50px;
+    padding-top: 1rem;
+}
+
+card {
+    padding: .5rem;
+    border: 1px solid black;
+    margin: .5rem;
+    border-radius: 5px;
+    background-color: darkblue;
+    color: white;
 }
